updated swagger for handlers
